--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food Savior</title>
+      <!-- Primary Meta Tags -->
+  <title>FoodSavior</title>
+  <meta name="title" content="FoodSavior App Project">
+  <meta name="description" content="FoodSavior Final Project
+  ✔ Inventory of products by user.
+  ✔ User Sessions with social integrations
+  ✔ Full React implementation
+  ✔ Favorites, Management of products and categories.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://metatags.io/">
+<meta property="og:title" content="FoodSavior">
+<meta property="og:description" content="FoodSavior Final Project
+✔ Inventory of products by user.
+✔ User Sessions with social integrations
+✔ Full React implementation
+✔ Favorites, Management of products and categories.">
+<meta property="og:image" content="https://food-savior-react.vercel.app/src/img/openGraph.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:title" content="FoodSavior">
+<meta property="twitter:description" content="FoodSavior Final Project
+✔ Inventory of products by user.
+✔ User Sessions with social integrations
+✔ Full React implementation
+✔ Favorites, Management of products and categories.">
+<meta property="twitter:image" content="https://food-savior-react.vercel.app/src/img/openGraph.png">
   </head>
   <body>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
