--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 ✔ User Sessions with social integrations
 ✔ Full React implementation
 ✔ Favorites, Management of products and categories.">
-<meta property="og:image" content="[open-Graph.png](https://postimg.cc/FYjFsZws)">
+<meta property="og:image" content="https://i.postimg.cc/qvFNwDLn/open-Graph.png">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
@@ -39,7 +39,7 @@
 ✔ User Sessions with social integrations
 ✔ Full React implementation
 ✔ Favorites, Management of products and categories.">
-<meta property="twitter:image" content="[open-Graph.png](https://postimg.cc/FYjFsZws)">
+<meta property="twitter:image" content="https://i.postimg.cc/qvFNwDLn/open-Graph.png">
   </head>
   <body>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
